frontend/src/index.css
@import "tailwindcss";

.h-593 {
    height: 593px;
}

.h-668 {
    height: 668px;
}

.bg-main-pink {
    background-color: #FF00FF;
}

.border-main-pink {
    border-color: #FF00FF;
}

.bg-main-cyan {
    background-color: #00E1FF;
}

.border-main-cyan {
    border-color: #00E1FF;
}

.text-main-cyan {
    color: #00E1FF;
}

.bg-main-green {
    background-color: #8ACE00;
}

.bg-main-yellow {
    background-color: #FFFF00;
}

.text-main-yellow {
    color: #FFFF00;
}

.hover-main-yellow:hover {
    color: #FFFF00;
}

.form-bg {
    background-color: #E8E8E8;
}

.btn-border-pink {
    border-left: 6px solid #FF00FF;
} 

.btn-border-cyan {
    border-left: 6px solid #00E1FF;
}

.border-cyan {
    border-right: 2px solid #00E1FF;
    border-top: 2px solid #00E1FF;
    border-bottom: 2px solid #00E1FF;
}

.border-cyan-t-b {
    border-top: 2px solid #00E1FF;
    border-bottom: 2px solid #00E1FF;
}

.btn-border-green {
    border-left: 6px solid #8ACE00;
}

.h-447 {
    height: 447px;
}

.h-555 {
    height: 555px;
}

.h-560 {
    height: 560px;
}

.h-323 {
    height: 323px;
}

